# AIimg-prompt-studio

./: .env.example  .gitignore  README.en.md  README.md  Workflow.md  start-all.bat  task-lora.MD
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
services/backend/: .env.example  pyproject.toml
services/backend/app/: __init__.py  cors.py  main.py  settings.py
services/backend/app/api/: agent.py  files.py  generation.py  logs.py  models.py  providers.py  registry.py  security.py  sessions.py  settings.py  skills.py  templates.py
services/backend/app/core/: agent_fallbacks.py  app_settings_store.py  file_store.py  flux_model_manager.py  image_records.py  json_schema.py  prompt_compiler.py  questionnaire_engine.py  registry_prompt_compiler.py  (+4 more)
services/backend/tests/: test_agent_api.py  test_agent_turn_discriminated_union.py  test_codex_agent_provider.py  test_codex_binary_resolver.py  test_codex_command_builder.py  test_codex_image_provider.py  test_codex_output_schema_smoke.py  test_database_schema.py  test_encoding_hygiene.py  test_flux_image_provider.py  test_flux_model_manager.py  test_generation_api.py  test_health.py  test_local_flux_client.py  test_local_flux_provider.py  test_models_logs_api.py  test_ollama_agent_provider.py  test_ollama_client.py  test_prompt_versions_api.py  test_provider_endpoints.py  test_questionnaire_answers.py  test_questionnaire_schema.py  test_registry_api.py  test_safe_file_serving.py  test_settings.py  test_strict_json_schema.py  test_tauri_shell_files.py  test_thumbnail_policy.py
(+55 files in other folders)
