[project]
name = "prompt-optimizer-studio-backend"
version = "0.1.0"
description = "Local-first backend for Prompt Optimizer Studio."
readme = "../../README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "httpx>=0.28.0,<1.0.0",
    "pillow>=11.0.0,<13.0.0",
    "pydantic>=2.11.0,<3.0.0",
    "pydantic-settings>=2.9.0,<3.0.0",
    "python-dotenv>=1.1.0,<2.0.0",
    "python-multipart>=0.0.20,<1.0.0",
    "sqlmodel>=0.0.24,<1.0.0",
    "uvicorn[standard]>=0.34.0,<1.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0,<2.0.0",
    "pytest>=8.3.0,<9.0.0",
    "ruff>=0.11.0,<1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "codex_smoke: opt-in tests that may invoke the local Codex CLI",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = []
